--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building SmallChange
+Building UIOPcoin
 
-See doc/readme-qt.rst for instructions on building smallchange-qt,
+See doc/readme-qt.rst for instructions on building uiopcoin-qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of SmallChange.
+implementation of UIOPcoin.
 
 See doc/build-*.txt for instructions on building smallchange,
 the intended-for-services, no-graphical-interface, reference
-implementation of SmallChange.
+implementation of UIOPcoin.
